# onion-mpv-webui

./: .gitignore  CMakeLists.txt  Makefile  Makefile_html  README.md  libwebui.conf.example
po/: de.po
src/: CMakeLists.txt  buffer_pool.c  buffer_pool.h  defines.c  defines.h  fileserver.c  fileserver.h  media.c  media.h  media_api_handler1.c  media_api_handler2.c  media_html_handler.c  media_track_paths.c  media_track_paths.h  mpv_api_commands.c  mpv_api_commands.h  mpv_plugin.c  mpv_script_options.c  mpv_script_options.h  onion_default_errors.c  onion_default_errors.h  onion_ws_status.c  onion_ws_status.h  onion_ws_time.c  patch_onion_cmakelists.sh  percent_encoding.c  percent_encoding.h  simple.c  standalone.c  tools.c  tools.h  utf8.h  webui.c  webui.pc.in  webui_onion.c  webui_onion.h
src/include/: execinfo.h  wordexp.c  wordexp.h
src/tests/: CMakeLists.txt  test_tools.c
templates/: controls.include  fileserver.html  footer.include  js.include  media.html  media.json  media_api_list.json  media_share.html  style.include
tmp/: maker.html
webui-page/: api  audio.js  buttons.js  chapter_marker.js  index.html  json-diff.js  keybindings.js  overlays.js  playlist.js  shares.js  swipes.js  tools.js  touchmenu.js  webui.css  webui.js  webui2.js
webui-page/static/audio/: silence1min.m4a
webui-page/static/css/: webui.min.css
webui-page/static/js/: swiped-events.min.js  webui.min.js
